--- a/.github/workflows/github-page.yml
+++ b/.github/workflows/github-page.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: gradle/gradle-build-action@v2
         with:
           gradle-version: 6.7.1
-          arguments: dokkaHtml
+          arguments: dokkaHtml --stacktrace
 
       # 部署到 GitHub Pages
       - name: Deploy
