--- a/.github/workflows/github-page.yml
+++ b/.github/workflows/github-page.yml
@@ -12,15 +12,14 @@ jobs:
     steps:
       # 拉取代码
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           persist-credentials: false
 
-      - name: Set up the Java JDK
-        uses: actions/setup-java@v2
+      - name: Set up JDK
+        uses: actions/setup-java@v3
         with:
-          java-version: '11'
-          distribution: 'adopt'
+          java-version: 11
 
       # 生成javadoc
       - uses: gradle/gradle-build-action@v2
