--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,6 +17,7 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           java-version: 11
+          distribution: 'adopt'
       - uses: gradle/gradle-build-action@v2
         with:
           gradle-version: 6.7.1
