--- a/androidx-app/build.gradle
+++ b/androidx-app/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:+'
     implementation 'com.google.code.gson:gson:+'
-    implementation 'io.github.ayvytr:Logger:3.3.1'
+    implementation 'io.github.ayvytr:logger:3.3.4'
     implementation 'io.github.ayvytr:okhttploginterceptor:+'
     implementation 'io.github.ayvytr:ktx-androidx:3.0.7'
     implementation 'io.github.ayvytr:base-adapter:0.1.2'
