--- a/flow/build.gradle
+++ b/flow/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
 
 
-//    implementation 'io.github.ayvytr:Logger:3.3.1'
+//    implementation 'io.github.ayvytr:logger:3.3.4'
 //    implementation 'io.github.ayvytr:network:+'
 
     dokkaJavadocPlugin("org.jetbrains.dokka:kotlin-as-java-plugin:$dokka_version")
