--- a/gradle.properties
+++ b/gradle.properties
@@ -19,7 +19,9 @@ android.enableJetifier=true
 
 android.injected.testOnly=false
 
-VERSION_NAME=0.0.1
+SONATYPE_HOST=S01
+
+VERSION_NAME=0.0.2
 
 POM_NAME=flow
 POM_ARTIFACT_ID=flow
