--- a/androidx-app/src/main/AndroidManifest.xml
+++ b/androidx-app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".wanandroid.WanAndroidListActivity"
+            android:exported="false" />
+        <activity
             android:name=".wanandroid.WanAndroidActivity"
             android:exported="false" />
         <activity android:name=".test.TestActivity">
