修改配置排除aar中的BuildConfig.class

--- a/kotlin_maven_push.gradle
+++ b/kotlin_maven_push.gradle
@@ -8,6 +8,13 @@ allprojects {
             sonatypeHost = "S01"
         }
     }
+
+    android {
+        buildFeatures {
+            //java generated BuildConfig不会生成
+            buildConfig = false
+        }
+    }
 }
 
 def dokkaOutputDir = "$buildDir/javadoc"
