--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".basevm.ViewPagerActivity"
+            android:exported="false" />
+        <activity
             android:name=".lazy.LazyLoadActivity"
             android:exported="false" />
         <activity
