--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,17 @@
 plugins {
     alias(libs.plugins.android.application)
     alias(libs.plugins.kotlin.android)
+    id 'kotlin-parcelize'
 }
 
 
 android {
-    compileSdkVersion 30
+    compileSdk 34
     namespace 'com.ayvytr.coroutines'
 
     defaultConfig {
         applicationId "com.ayvytr.coroutines"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -26,40 +27,46 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
     buildFeatures {
+        viewBinding = true
         buildConfig = true
     }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    testImplementation libs.junit
+    androidTestImplementation libs.androidx.junit
+    androidTestImplementation libs.androidx.espresso.core
 
     implementation libs.kotlin.stdlib8
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
-//    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:+'
+    implementation libs.kotlin.coroutines
+    implementation libs.kotlin.coroutines.android
 
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation libs.androidx.appcompat
+    implementation libs.viewmodel
+    implementation libs.viewmodel.ktx
 
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:+'
+    debugImplementation libs.leakcanary
 
-    implementation 'com.squareup.okhttp3:okhttp:+'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:+'
-    implementation 'com.google.code.gson:gson:+'
-    implementation 'io.github.ayvytr:logger:+'
-    implementation 'io.github.ayvytr:okhttploginterceptor:+'
-    implementation 'io.github.ayvytr:ktx-androidx:+'
-    implementation 'io.github.ayvytr:base-adapter:0.1.2'
+    implementation libs.retrofit
+    implementation libs.retrofit.gson
+    implementation libs.gson
+    implementation libs.logger
+    implementation libs.okhttploginterceptor
+    implementation libs.ktx.androidx
+    implementation libs.base.adapter
+    implementation libs.network
 
 //    implementation 'ru.gildor.coroutines:kotlin-coroutines-retrofit:1.1.0'
-    implementation 'io.github.ayvytr:network:+'
+
+    implementation libs.scwang90.refresh.header.classics
+    implementation libs.scwang90.refresh.kernel
+
+    implementation libs.material
 
 //    def enableJcenter = true
 //    def enableJcenter = false
