--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,25 +13,27 @@ jobs:
     timeout-minutes: 10
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
-        with:
-          java-version: 13
-          distribution: 'adopt'
-      - uses: gradle/gradle-build-action@v2
-        with:
-          gradle-version: 7.3.3
-          arguments: build --dry-run  # just test build configuration
+      - name: Checkout code
+        uses: actions/checkout@v6
 
-      - uses: gradle/gradle-build-action@v2
+      - name: Setup JDK
+        uses: actions/setup-java@v5
         with:
-          gradle-version: 7.3.3
-          arguments: check
-      - uses: gradle/gradle-build-action@v2
-        with:
-          gradle-version: 7.3.3
-          arguments: lint
-      - uses: gradle/gradle-build-action@v2
-        with:
-          gradle-version: 7.3.3
-          arguments: assembleRelease
+          java-version: '17'
+          distribution: 'zulu'
+          cache: 'gradle' # 启用 Gradle 依赖缓存
+
+      - name: Make gradlew executable
+        run: chmod +x gradlew
+
+      - name: Execute Gradle tasks
+        uses: gradle/actions/setup-gradle@v5
+
+      - name: Build with Gradle
+        run: ./gradlew --dry-run
+
+      #      - name: Build with Gradle
+      #        run: ./gradlew lint
+
+      - name: Build with Gradle
+        run: ./gradlew assembleRelease
