--- a/flow/build.gradle
+++ b/flow/build.gradle
@@ -2,6 +2,7 @@ plugins {
     alias(libs.plugins.android.library)
     alias(libs.plugins.kotlin.android)
     id "com.vanniktech.maven.publish" version "0.35.0"
+    alias(libs.plugins.dokka)
 }
 
 android {
